--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Hushed</string>
+    <string name="app_version">Pre-Alpha</string>
+    <string name="course_name">CS4360 Senior Experience Course</string>
+    <string name="button_connect">Connect</string>
+    <string name="button_settings">Settings</string>
+    <string name="button_about">About</string>
+    <string name="button_dummysend">Dummy Send</string>
+    <string name="button_dummyretrieve">Dummy Retrieve</string>
 </resources>
