--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,10 @@
     <string name="app_name">Hushed</string>
     <string name="app_version">Pre-Alpha</string>
     <string name="action_nickname">Nickname</string>
+    <string name="action_about">About</string>
     <string name="course_name">CS4360 Senior Experience Course</string>
     <string name="button_connect">Connect</string>
     <string name="button_settings">Settings</string>
-    <string name="button_about">About</string>
-    <string name="button_dummysend">Dummy Send</string>
-    <string name="button_dummyretrieve">Dummy Retrieve</string>
     <string name="button_send">Send</string>
     <string name="button_enter">Enter</string>
     <string name="button_newContact">+</string>
@@ -15,6 +13,6 @@
     <string name="prompt_enterMesssage">Enter Message</string>
     <string name="prompt_enterNickname">Enter Nickname</string>
     <string name="display_myOwnNickname">My Nickname</string>
-    <string name="display_nickname_message">Your Nickname is: %s</string>
-    <string name="display_default_nickname">Your Nickname will display here</string>
+    <string name="display_nickname_message">Current nickname: %s</string>
+    <string name="display_default_nickname">Your nickname will display here</string>
 </resources>
